--- a/localisation/mymod.csv
+++ b/localisation/mymod.csv
@@ -23,9 +23,9 @@ EVTOPTA602001;Hurray!;;;;;;;;;;;;;
 trading_port;Change RGO;;;;;;;;;;;;;
 education_policy;Education Policy;;;;;;;;;;;;;
 discriminatory_education;Discriminatory;;;;;;;;;;;;;
-discriminatory_education_desc;Education that only allows teaching in the accepted languages of our country.;;;;;;;;;;;;;
+discriminatory_education_desc;Education that only allows teaching in the accepted languages of our country, and discriminates against poor people.;;;;;;;;;;;;;
 inclusive_education;Multilingual;;;;;;;;;;;;;
-inclusive_education_desc;Every person is granted the right to study in their own language.;;;;;;;;;;;;;
+inclusive_education_desc;Every person is granted the right to study in their own language. Class discrimination is also rooted out of the school system.;;;;;;;;;;;;;
 minor_union_member;Minor Union Member;;;;;;;;;;;;;
 minor_union_member_desc;This country is a non-leading member of a union.;;;;;;;;;;;;;
 EVENTNAME602002;End Of The Compromise;;;;;;;;;;;;;
@@ -253,3 +253,10 @@ austrian_tech_school;Absolutist Bureaucracy;;;;;;;;;;;;;
 switch_to_austrian_tech_title;Absolutist Bureaucracy;;;;;;;;;;;;;
 switch_to_austrian_tech_desc;Absolutist bureaucracy is meant to contain seemingly diverse regions under one central governemnt. Lands that are not bound together by culture and language, should now be united by rules and laws. Small and weak nations should be forced to fight together under one state.;;;;;;;;;;;;;
 switch_to_austrian_tech;Absolutist Bureaucracy;;;;;;;;;;;;;
+foundry;Metal Foundry;;;;;;;;;;;;;
+foundries;Metal Foundries;;;;;;;;;;;;;
+foundries_desc;Metals can easily be molded into everyday items like forks or hunting knives. We are now able to mass produce these consumer goods in factories.;;;;;;;;;;;;;
+foundry_desc;Metal Foundries are places where metals are molded into different shapes and forms. This is where metal mugs, utencils, and other common items are made.;;;;;;;;;;;;;
+iron_castings;Metal Castings;;;;;;;;;;;;;
+cheap_steel_castings;Cheap Steel;;;;;;;;;;;;;
+cheap_steel_castings_desc;We can now produce metal castings much more efficiently, thus making it potentially available for a wider public.;;;;;;;;;;;;;
