Austria/Hungary tweaks and flavour
-Dealing with Hungarian nobles now only requires secret police instead of both secret police and police state
-Hungary has a new historical decision!

--- a/localisation/mymod.csv
+++ b/localisation/mymod.csv
@@ -260,3 +260,6 @@ foundry_desc;Metal Foundries are places where metals are molded into different s
 iron_castings;Metal Castings;;;;;;;;;;;;;
 cheap_steel_castings;Cheap Steel;;;;;;;;;;;;;
 cheap_steel_castings_desc;We can now produce metal castings much more efficiently, thus making it potentially available for a wider public.;;;;;;;;;;;;;
+hungarian_silk;Hungarian Silk;;;;;;;;;;;;;
+hungarian_silk_title;Hungarian Silk;;;;;;;;;;;;;
+hungarian_silk_desc;Silk production in Hungary started as early as the mid 1800's, although it remained merely as a side income for the country for a while. By the late 1800s, silk production saw a considerable increase, and by 1905, Hungary was the 3rd largest producer of silk in Europe, behind France and Italy. This big leap in silk production was possible thanks to the innovation of people like Pal Bezeredj, who according to the advice of Louis Kossuth, started a major silk business in Tolna county in 1880.;;;;;;;;;;;;;
