added education funding decision

--- a/localisation/mymod.csv
+++ b/localisation/mymod.csv
@@ -263,3 +263,56 @@ cheap_steel_castings_desc;We can now produce metal castings much more efficientl
 hungarian_silk;Hungarian Silk;;;;;;;;;;;;;
 hungarian_silk_title;Hungarian Silk;;;;;;;;;;;;;
 hungarian_silk_desc;Silk production in Hungary started as early as the mid 1800's, although it remained merely as a side income for the country for a while. By the late 1800s, silk production saw a considerable increase, and by 1905, Hungary was the 3rd largest producer of silk in Europe, behind France and Italy. This big leap in silk production was possible thanks to the innovation of people like Pal Bezeredj, who according to the advice of Louis Kossuth, started a major silk business in Tolna county in 1880.;;;;;;;;;;;;;
+EVTOPTA602020;We should make a small donation.§R(Pay or owe 300,000¤)§W;;;;;;;;;;;;;
+EVTOPTA602021;We should make a small donation.§R(Pay or owe 300,000¤)§W;;;;;;;;;;;;;
+EVTOPTA602022;We should make a small donation.§R(Pay or owe 300,000¤)§W;;;;;;;;;;;;;
+EVTOPTA602023;We should make a small donation.§R(Pay or owe 300,000¤)§W;;;;;;;;;;;;;
+EVTOPTB602020;We should make a moderate donation.§R(Pay or owe 700,000¤)§W;;;;;;;;;;;;;
+EVTOPTB602021;We should make a moderate donation.§R(Pay or owe 700,000¤)§W;;;;;;;;;;;;;
+EVTOPTB602022;We should make a moderate donation.§R(Pay or owe 700,000¤)§W;;;;;;;;;;;;;
+EVTOPTB602023;We should make a moderate donation.§R(Pay or owe 700,000¤)§W;;;;;;;;;;;;;
+EVTOPTC602020;We should make a generous donation.§R(Pay or owe 1,500,000¤)§W;;;;;;;;;;;;;
+EVTOPTC602021;We should make a generous donation.§R(Pay or owe 1,500,000¤)§W;;;;;;;;;;;;;
+EVTOPTC602022;We should make a generous donation.§R(Pay or owe 1,500,000¤)§W;;;;;;;;;;;;;
+EVTOPTC602023;We should make a generous donation.§R(Pay or owe 1,500,000¤)§W;;;;;;;;;;;;;
+EVENTNAME602019;Research Funding;;;;;;;;;;;;;
+EVENTDESC602019;We have decided to donate some extra funds to an academic institute in order to increase it's capabilities. Which one should we donate to?;;;;;;;;;;;;;
+EVTOPTA602019;The Military Academy;;;;;;;;;;;;;
+EVTOPTB602019;The Naval Academy;;;;;;;;;;;;;
+EVTOPTC602019;The University of Art and Philosophy;;;;;;;;;;;;;
+EVTOPTD602019;The Economic Research Institute;;;;;;;;;;;;;
+EVENTNAME602020;Donate to the Military Academy;;;;;;;;;;;;;
+EVENTNAME602021;Donate to the Naval Academy;;;;;;;;;;;;;
+EVENTNAME602022;Donate to the Art School;;;;;;;;;;;;;
+EVENTNAME602023;Donate to the Economic Research Institute;;;;;;;;;;;;;
+EVENTDESC602020;We have decided to donate money to the Military Academy, how much should we donate?;;;;;;;;;;;;;
+EVENTDESC602021;We have decided to donate money to the Naval Academy, how much should we donate?;;;;;;;;;;;;;
+EVENTDESC602022;We have decided to donate money to the University of Arts and Philosophy, how much should we donate?;;;;;;;;;;;;;
+EVENTDESC602023;We have decided to donate money to the Economic Research Institute, how much should we donate?;;;;;;;;;;;;;
+ram_donate_to_research;Donate to Research;;;;;;;;;;;;;
+ram_donate_to_research_title;Donate Funds to an Academic Institute;;;;;;;;;;;;;
+ram_donate_to_research_desc;We can choose to donate state funds to a research institute and icrease its capabilities.;;;;;;;;;;;;;
+military_academy_low_fund;Military Academy small donation;;;;;;;;;;;;;
+military_academy_medium_fund;Military Academy moderate donation;;;;;;;;;;;;;
+military_academy_high_fund;Military Academy generous donation;;;;;;;;;;;;;
+naval_academy_low_fund;Naval Academy small donation;;;;;;;;;;;;;
+naval_academy_medium_fund;Naval Academy moderate donation;;;;;;;;;;;;;
+naval_academy_high_fund;Naval Academy generous donation;;;;;;;;;;;;;
+art_school_low_fund;Art School small donation;;;;;;;;;;;;;
+art_school_medium_fund;Art School moderate donation;;;;;;;;;;;;;
+art_school_high_fund;Art School generous donation;;;;;;;;;;;;;
+economy_school_low_fund;Economic Institute small donation;;;;;;;;;;;;;
+economy_school_medium_fund;Economic Institute moderate donation;;;;;;;;;;;;;
+economy_school_high_fund;Economic Institute generous donation;;;;;;;;;;;;;
+military_academy_low_fund_desc;Military Academy small donation;;;;;;;;;;;;;
+military_academy_medium_fund_desc;Military Academy moderate donation;;;;;;;;;;;;;
+military_academy_high_fund_desc;Military Academy generous donation;;;;;;;;;;;;;
+naval_academy_low_fund_desc;Naval Academy small donation;;;;;;;;;;;;;
+naval_academy_medium_fund_desc;Naval Academy moderate donation;;;;;;;;;;;;;
+naval_academy_high_fund_desc;Naval Academy generous donation;;;;;;;;;;;;;
+art_school_low_fund_desc;Art School small donation;;;;;;;;;;;;;
+art_school_medium_fund_desc;Art School moderate donation;;;;;;;;;;;;;
+art_school_high_fund_desc;Art School generous donation;;;;;;;;;;;;;
+economy_school_low_fund_desc;Economic Institute small donation;;;;;;;;;;;;;
+economy_school_medium_fund_desc;Economic Institute moderate donation;;;;;;;;;;;;;
+economy_school_high_fund_desc;Economic Institute generous donation;;;;;;;;;;;;;
