Uncivs can now donate to research

--- a/localisation/mymod.csv
+++ b/localisation/mymod.csv
@@ -316,3 +316,10 @@ art_school_high_fund_desc;Art School generous donation;;;;;;;;;;;;;
 economy_school_low_fund_desc;Economic Institute small donation;;;;;;;;;;;;;
 economy_school_medium_fund_desc;Economic Institute moderate donation;;;;;;;;;;;;;
 economy_school_high_fund_desc;Economic Institute generous donation;;;;;;;;;;;;;
+ram_donate_to_research_unciv_title;Donate to Research;;;;;;;;;;;;;
+ram_donate_to_research_unciv_desc;We can choose to donate state funds to one of our foreign universities, which would speed up our progress towards westernisation.;;;;;;;;;;;;;
+unciv_research_low_fund;Low research funding;;;;;;;;;;;;;
+unciv_research_medium_fund;Moderate research funding;;;;;;;;;;;;;
+unciv_research_high_fund;Generous research funding;;;;;;;;;;;;;
+EVENTNAME602025;Donate to Foreign Research;;;;;;;;;;;;;
+EVENTDESC602025;We have decided to donate state funds to our universities, how much should we donate?;;;;;;;;;;;;;
